Add AnimeVietSub source and implement OkHttp for ExoPlayer
- Add `AnimeVietSubSource` implementation including custom decryption and HLS playlist handling.
- Replace `AsianLoad` with `AnimeVietSub` in source selector and UI arrays.
- Switch `PlayerViewModel` to use `OkHttpDataSource` with custom TLS configurations.
- Add support for loading raw m3u8 playlists from memory in the player.
- Update `exoplayer-extension-okhttp` and `kotlinx-coroutines-test` dependencies.
- Update IDE project configuration files.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:$exo_version"
     implementation "com.google.android.exoplayer:exoplayer-hls:$exo_version"
     implementation "com.google.android.exoplayer:extension-mediasession:$exo_version"
+    implementation "com.google.android.exoplayer:extension-okhttp:$exo_version"
 
     // MVVM
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
