--- a/animeSources/build.gradle
+++ b/animeSources/build.gradle
@@ -37,12 +37,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
-
     // Network
     implementation 'org.jsoup:jsoup:1.15.2' // Web scraping tool
     implementation 'com.google.code.gson:gson:2.9.0'  // Json Parser
+
+
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
